--- a/index.html
+++ b/index.html
@@ -162,10 +162,15 @@
             <div>
                 <div class="student-info main-part">
                     <div class="student-info_title">
-                        <h3 class="title-time">THÔNG TIN SINH VIÊN</h3>
-                        <a href="/edit.html">
-                            <img class="edit-icon" src="/assets/images/edit.png" alt="edit-photo">
-                        </a>
+                        <div class="flex">
+                            <h3 class="title-time">THÔNG TIN SINH VIÊN</h3>
+                            <a id="editBtn">
+                                <img class="edit-icon" src="/assets/images/edit.png" alt="edit-photo">
+                            </a>
+                        </div>
+                        <div id="btn-group">
+                            
+                        </div>
                     </div>
                     <div class="line-separate"></div>
                     <div class="student-info_first">
