add upload image

--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
                             <div class="image-frame">
                                 <div class="student-image"></div>
                             </div>
+                            <div id="change-image-container">
+
+                            </div>
                             <p class="mssv">MSSV: 20215415</p>
                         </div>
                         <div id="container" style="margin-top:4px" class="grid grid-col-2">
