add group, add item, delete item

--- a/index.html
+++ b/index.html
@@ -158,87 +158,42 @@
             <div class="personal-info">
                 <h3 class="title-time">THÔNG TIN CÁ NHÂN</h3>
             </div>
-            <div class="line-info"></div>
-            <div>
-                <div class="student-info main-part">
-                    <div class="student-info_title">
-                        <div class="flex">
-                            <h3 class="title-time">THÔNG TIN SINH VIÊN</h3>
-                            <a id="editBtn">
-                                <img class="edit-icon" src="/assets/images/edit.png" alt="edit-photo">
-                            </a>
-                        </div>
-                        <div id="btn-group">
-                            
-                        </div>
+            <div class="info-container">
+                <div class="info-container-title">
+                    <div class="info-title-text">
+                        Thông tin sinh viên_20215415
                     </div>
-                    <div class="line-separate"></div>
-                    <div class="student-info_first">
-                        <div class="image-mssv">
-                            <div class="image-frame">
-                                <div class="student-image"></div>
-                            </div>
-                            <div id="change-image-container">
-
-                            </div>
-                            <p class="mssv">MSSV: 20215415</p>
+                    <div class="btn-group">
+                        <div class="add-info-btn">
+                            < Add Info Item >
                         </div>
-                        <div id="container" style="margin-top:4px" class="grid grid-col-2">
-                            
+                        <div class="add-group-btn">
+                            < Add Group Item >
                         </div>
                     </div>
                 </div>
-                <div class="study-info main-part">
-                    <h3 class="title-time">THÔNG TIN HỌC TẬP</h3>
-                    <div class="line-separate"></div>
-                    <div class="student-info_first">
-                        <div style="margin-top:4px" class="grid grid-col-2">
-                            <div class="special-text info-title">
-                                <p>Tổng kết học kỳ&emsp;: <span class="info-content">20231</span></p>
-                                <p>Trung bình tích lũy&emsp;: <span class="info-content">3.39</span></p>
-                                <p>Số TC nợ đăng ký&emsp;: <span class="info-content">0</span></p>
-                            </div>
-                            <div class="info-title">
-                                <p>Số TC tích lũy&emsp;: <span class="info-content">84</span></p>
-                                <p>Trình độ sinh viên&emsp;: <span class="info-content">3</span></p>
-                                <p>Mức cảnh báo&emsp;: <span class="info-content">M0</span></p>
-                            </div>
+                <div class="info-content-main">
+                    <div class="info-item">
+                        <div class="info-item-title">Họ và tên</div>
+                        <div class="info-item-action">
+                            <input class="info-item-input" type="text">
+                            <div class="delete-trash-btn"></div>
                         </div>
                     </div>
-                </div>
-                <div class="personal-info_bottom main-part">
-                    <h3 class="title-time">THÔNG TIN CÁ NHÂN</h3>
-                    <div class="line-separate"></div>
-                    <div class="student-info_first">
-                        <div style="margin-top:4px" class="grid grid-col-2">
-                            <div class="special-text info-title">
-                                <p>Dân tộc&emsp;: <span class="info-content">KINH</span></p>
-                                <p>Năm TN cấp 3&emsp;: <span class="info-content">2021</span></p>
-                                <p>Địa chỉ&emsp;: <span class="info-content">XÃ CỔ DŨNG, HUYỆN KIM THÀNH, TỈNH HẢI DƯƠNG</span></p>
-                                <p>Số CMTND&emsp;: <span class="info-content">030***08</span></p>
-                                <p>Nơi cấp&emsp;: <span class="info-content">HẢI DƯƠNG</span></p>
-                                <p>Họ tên bố&emsp;: <span class="info-content">VŨ ĐÌNH THỦY</span></p>
-                                <p>Năm sinh&emsp;: <span class="info-content">1978</span></p>
-                                <p>Nghề nghiệp&emsp;: <span class="info-content">TRỒNG TRỌT</span></p>
-                                <p>Điện thoại&emsp;: <span class="info-content">096***17</span></p>
-                                <p>Email&emsp;: <span class="info-content">KHÔNG CÓ</span></p>
-                            </div>
-                            <div class="info-title">
-                                <p>Tôn giáo&emsp;: <span class="info-content">KHÔNG</span></p>
-                                <p>Trường THPT&emsp;: <span class="info-content">KIM THÀNH</span></p>
-                                <p>Hộ khẩu&emsp;: <span class="info-content">XÃ CỔ DŨNG, HUYỆN KIM THÀNH, TỈNH HẢI DƯƠNG</span></p>
-                                <p>Số Điện thoại&emsp;: <span class="info-content">052***76</span></p>
-                                <p>Họ tên mẹ&emsp;: <span class="info-content">NGUYỄN THỊ THÀNH</span></p>
-                                <p>Năm sinh&emsp;: <span class="info-content">1983</span></p>
-                                <p>Nghề nghiệp&emsp;: <span class="info-content">CÔNG NHÂN</span></p>
-                                <p>Điện thoại&emsp;: <span class="info-content">096***86</span></p>
-                                <p>Email&emsp;: <span class="info-content">KHÔNG CÓ</span></p>
-                            </div>
+                    <div class="info-item">
+                        <div class="info-item-title">Mã số sinh viên</div>
+                        <div class="info-item-action">
+                            <input class="info-item-input" type="text">
+                            <div class="delete-trash-btn"></div>
                         </div>
                     </div>
-                </div>
-                <div class="note">
-                    <p>Ghi chú:Nếu sinh viên thấy thông tin của mình chưa chính xác, xin vui lòng liên hệ phòng Đào tạo để cập nhật lại.</p>
+                    <div class="info-item">
+                        <div class="info-item-title">Chương trình đào tạo</div>
+                        <div class="info-item-action">
+                            <input class="info-item-input" type="text">
+                            <div class="delete-trash-btn"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
