--- a/index.html
+++ b/index.html
@@ -177,6 +177,11 @@
                         <div class="info-item-title">Họ và tên</div>
                         <div class="info-item-action">
                             <input class="info-item-input" type="text">
+                            <select class="input-type" name="input-type" id="">
+                                <option value="Text">Text</option>
+                                <option value="Radio">Radio</option>
+                                <option value="Checkbox">Checkbox</option>
+                            </select>
                             <div class="delete-trash-btn"></div>
                         </div>
                     </div>
@@ -184,6 +189,11 @@
                         <div class="info-item-title">Mã số sinh viên</div>
                         <div class="info-item-action">
                             <input class="info-item-input" type="text">
+                            <select class="input-type" name="input-type" id="">
+                                <option value="Text">Text</option>
+                                <option value="Radio">Radio</option>
+                                <option value="Checkbox">Checkbox</option>
+                            </select>
                             <div class="delete-trash-btn"></div>
                         </div>
                     </div>
@@ -191,6 +201,11 @@
                         <div class="info-item-title">Chương trình đào tạo</div>
                         <div class="info-item-action">
                             <input class="info-item-input" type="text">
+                            <select class="input-type" name="input-type" id="">
+                                <option value="Text">Text</option>
+                                <option value="Radio">Radio</option>
+                                <option value="Checkbox">Checkbox</option>
+                            </select>
                             <div class="delete-trash-btn"></div>
                         </div>
                     </div>
